--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,14 @@
 
 
 {% block body %}
-<h1>Главная страница</h1>
+    <div class="main__block__btn">
+        <div class="cont__main__btn">
+            <button class="btn btn-outline-secondary btn__main" type="button">Создать тест</button>
+            <button class="btn btn-outline-secondary btn__main" type="button">Создать опрос</button>
+            <button class="btn btn-outline-secondary btn__main" type="button">Группы</button>
+            <button class="btn btn-outline-secondary btn__main" type="button">Назанчить тестирование</button>
+            <button class="btn btn-outline-secondary btn__main" type="button">Показать статистику</button>
+            <button class="btn btn-outline-secondary btn__main" type="button">Сгенерировать отчет</button>
+        </div>
+    </div>
 {% endblock %}
