--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="main__block__btn">
         <div class="cont__main__btn">
-            <a href="/create_test"><button class="btn btn-outline-secondary btn__main" type="button">Создать тест</button></a>
+            <a href="/create-test"><button class="btn btn-outline-secondary btn__main" type="button">Создать тест</button></a>
             <button class="btn btn-outline-secondary btn__main" type="button">Создать опрос</button>
             <button class="btn btn-outline-secondary btn__main" type="button">Группы</button>
             <button class="btn btn-outline-secondary btn__main" type="button">Назанчить тестирование</button>
