--- a/templates/create-test.html
+++ b/templates/create-test.html
@@ -10,9 +10,9 @@
     <h1 class="title__create">Добавьте название теста</h1>
 </div>
 <div class="cont__input__title">
-    <form action="post" class="create_form__title">
-        <input type="text" class="input__title__create" name="input__title__create__test" autofocus="" placeholder="Название теста" required="">
-        <textarea class="input__description__create" name="input__description__create__test" placeholder="Описание теста"></textarea>
+    <form action="create-test" method="post" class="create_form__title">
+        <input type="text" class="input__title__create" id="input__title__create__test" name="input__title__create__test" autofocus="" placeholder="Название теста" required="">
+        <textarea class="input__description__create" id="input__description__create__test" name="input__description__create__test" placeholder="Описание теста"></textarea>
         <input type="submit" class="btn btn-primary btn__create" value="Далее">
     </form>
 </div>
