--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,7 +33,9 @@ form{
     display: flex;
     width: 100%;
     height: 4rem;
-    background: #565656
+    background: #565656;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .cont__main__btn{
@@ -55,6 +57,7 @@ form{
 .btn__main{
     --bs-btn-border-width: 0.2rem;
     width: 100%;
+    background: #fff;
 }
 
 .title__create{
@@ -112,4 +115,15 @@ form{
     margin: 6rem !important;
     width: 30%;
     height: 3rem;
+}
+
+.btn__header__main{
+    border: 0px;
+    background-color: #fff;
+}
+
+.cont_right_header{
+    display: flex;
+    row-gap: 1rem;
+    margin-right: 2rem;
 }
