--- a/templates/main.html
+++ b/templates/main.html
@@ -16,6 +16,8 @@
             <a href="/"><button class="btn btn-outline-secondary btn__header__main" type="button">Главная</button></a>
         </div>
     </header>
-    {% block body %} {% endblock %}
+    <div class="body__content">
+        {% block body %} {% endblock %}
+    </div>
 </body>
 </html>
