--- a/templates/create-quiz.html
+++ b/templates/create-quiz.html
@@ -10,9 +10,9 @@
     <h1 class="title__create">Добавьте название теста</h1>
 </div>
 <div class="cont__input__title">
-    <form action="create-test" method="post" class="create_form__title">
-        <input type="text" class="input__title__create" id="input__title__create__quiz" name="input__title__create__quiz" autofocus="" placeholder="Название теста" required="">
-        <textarea class="input__description__create" id="input__description__create__quiz" name="input__description__create__quiz" placeholder="Описание теста"></textarea>
+    <form method="post" class="create_form__title">
+        <input type="text" class="input__title__create"  name="input__title__create__quiz" autofocus="" placeholder="Название {{type}}" required="">
+        <textarea class="input__description__create" id="input__description__create__quiz" name="input__description__create__quiz" placeholder="Описание {{type}}"></textarea>
         <input type="submit" class="btn btn-primary btn__create" value="Далее">
     </form>
     {% block dialog %} {% endblock %}
